<resources>
    <string name="app_name">myNotebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myuser">NicName</string>
    <string name="mypass">Password</string>
    <string name="firstName">"First Name</string>
    <string name="lastName">"Last name</string>
    <string name="email">"E-mail"</string>
    <string name="Login">Login</string>
    <string name="hintUser">User Name</string>
    <string name="hintPass">Password</string>
    <string name="register">Register</string>
    <string name="Start">Start</string>
    <string name="txtMain">"Hello World"</string>
    <string name="txtRegister">"Register Here Please"</string>
    <string name="DefaultUser">"User Ready"</string>
    <string name="regUser">"Input User"</string>
    <string name="regRegister">"Register"</string>
    <string name="regNIC">"Enter your NicName please"</string>
    <string name="regFirstName">"Enter your First Name plesae"</string>
    <string name="regLasttName">"Enter your Last Name please"</string>
    <string name="regEmail">"Enter your e-mail please"</string>
    <string name="regPass">"Enter your password please"</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="txtReady">"Hola Mundo"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="splash_fragment_label">Splash Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_app">AppActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="ToolBarTitle">Home</string>

    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Settings">Settings</string>
    <string name="Tab1">This is TAB1</string>
    <string name="Tab2">This is TAB2</string>
    <string name="Tab3">This is TAB3</string>
    <string name="username">User Name</string>
    <string name="LastName">LastName</string>
    <string name="Image">Image</string>
    <string name="PhoneNumber">PhoneNumber</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="addUser">addUser</string>

    <!-- Strings en Castellano -->

    <string name="Lenguaje">Lenguaje</string>
    <string name="lenguaje_titulo">Seleccion de Lenguaje</string>

    <!--Strings para Notebook Tab1 -->

    <string name="tab1Title">Agenda</string>
    <string name="tab1SubTitle">Datos Personales</string>
    <string name="tab1Alias">Alias</string>
    <string name="tab1Nombre">Nombre</string>
    <string name="tab1Apellido">Apellido</string>
    <string name="tab1Telefono">Telefono</string>
    <string name="tab1Email">e-mail</string>
    <string name="tab1Direccion">Direccion</string>
    <string name="tab1Update">Actualizar</string>

    <!--Strings para Notebook Tab2 -->

    <string name="tab2Title">Agenda</string>
    <string name="tab2SubTitle">Datos Laborales</string>
    <string name="tab2Empresa">Empresa</string>
    <string name="tab2Direccion">Direccion Laboral</string>
    <string name="tab2Telefono">Telefono Laboral</string>
    <string name="tab2Email">e-mail Laboral</string>

    <!--Strings para Notebook Tab3 -->

    <string name="tab3Title">Agenda</string>
    <string name="tab3Subtitle">Notas</string>


    <!-- Strings en Ingles para Settings -->

    <string name="Lenguage">Lenguage</string>
    <string name="lenguaje_title">Lenguage Selection</string>

    <!--Strings para Notebook Tab1 -->

    <string name="tab1Title_In">Notebook</string>
    <string name="tab1SubTitle_In">Personal Data</string>
    <string name="tab1Alias_In">Alias</string>
    <string name="tab1Nombre_In">First Name</string>
    <string name="tab1Apellido_In">Last Name</string>
    <string name="tab1Telefono_In">Phone number</string>
    <string name="tab1Email_In">e-mail</string>
    <string name="tab1Direccion_In">Address</string>
    <string name="tab1Update_In">Update</string>


    <!--Strings para Notebook Tab2 -->

    <string name="tab2Title_In">Notebook</string>
    <string name="tab2SubTitle_In">Work Inform</string>
    <string name="tab2Empresa_In">Enterprise</string>
    <string name="tab2Direccion_In">Work Address</string>
    <string name="tab2Telefono_In">Work Phone number</string>
    <string name="tab2Email_In">Work e-mail</string>


    <!--Strings para Notebook Tab2 -->

    <string name="tab3Title_In">Notebook</string>
    <string name="tab3Subtitle_In">Notes</string>

</resources>