<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".fragment.regFragment">

    <TextView
        android:id="@+id/txtSplash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="none"
        android:clickable="false"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B5C52"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hGuideLine2"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine4"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine3"
        app:layout_constraintTop_toTopOf="@+id/hGuideLine1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vGuideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vGuideLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vGuideLine4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideLine4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideLine5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideLine6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideLine7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuidLine8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideLine9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideLine10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideLine11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <TextView
        android:id="@+id/txtRegDataFirstname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#10BD95"
        android:gravity="center_vertical"
        android:text="@string/firstName"
        android:textColor="#0B5C52"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hGuideLine6"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/hGuideLine5" />

    <TextView
        android:id="@+id/txtRegDataNicName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#10BD95"
        android:gravity="center_vertical"
        android:text="@string/myuser"
        android:textColor="#0B5C52"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hGuideLine4"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/hGuideLine3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editRegInputPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/regPass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/hGuideline13"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/hGuideline12" />

    <TextView
        android:id="@+id/txtRegDataLastName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#10BD95"
        android:gravity="center_vertical"
        android:text="@string/lastName"
        android:textColor="#0B5C52"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hGuidLine8"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/hGuideLine7"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtRegDataEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#10BD95"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textColor="#0B5C52"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hGuideLine10"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/hGuideLine9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <TextView
        android:id="@+id/txtRegDataPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#10BD95"
        android:gravity="center_vertical"
        android:text="@string/mypass"
        android:textColor="#0B5C52"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hGuideline12"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/hGuideLine11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hGuideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <Button
        android:id="@+id/buttonRegRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0B5C52"
        android:text="@string/regRegister"
        android:textColor="#1BA695"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hGuideline14"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine4"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine3"
        app:layout_constraintTop_toBottomOf="@+id/editRegInputPassword" />

    <EditText
        android:id="@+id/editRegInputEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/regEmail"
        android:inputType="textEmailAddress"
        android:textColor="#1BA695"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hGuideLine11"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/hGuideLine10" />

    <EditText
        android:id="@+id/editRegInputNicName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/regNIC"
        android:inputType="textPersonName"
        android:textColor="#1BA695"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hGuideLine5"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/hGuideLine4" />

    <EditText
        android:id="@+id/editRegInputFirstName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/regFirstName"
        android:inputType="textPersonName"
        android:textColor="#1BA695"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hGuideLine7"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/hGuideLine6" />

    <EditText
        android:id="@+id/editRegInputLastName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/regLasttName"
        android:inputType="textPersonName"
        android:textColor="#1BA695"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hGuideLine9"
        app:layout_constraintEnd_toStartOf="@+id/vGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/vGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/hGuidLine8" />

</androidx.constraintlayout.widget.ConstraintLayout>